MDEV-13242 Wrong results for queries with row constructors and information_schema